[gd_scene load_steps=6 format=3 uid="uid://cu14f048pbeb"]

[ext_resource type="Script" path="res://sim/ui/components/run_container.gd" id="1_cdbky"]
[ext_resource type="Texture2D" uid="uid://ft6cn1ic57da" path="res://asset/element/tool/create.svg" id="1_sgum8"]
[ext_resource type="Texture2D" uid="uid://duh2ga288kklt" path="res://asset/element/tool/run.svg" id="2_hs27a"]
[ext_resource type="PackedScene" uid="uid://hfysc3urk8qn" path="res://sim/ui/components/input_tab.tscn" id="4_gsvd0"]
[ext_resource type="PackedScene" uid="uid://bnuqnlaui04hk" path="res://sim/ui/components/test_tab.tscn" id="5_crhh8"]

[node name="run_container" type="GridContainer"]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_cdbky")

[node name="headers" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="tab" type="TabBar" parent="headers"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"TabContainer"
tab_count = 2
tab_0/title = "Input"
tab_1/title = "Test"

[node name="button_container" type="HBoxContainer" parent="headers"]
layout_mode = 2

[node name="add_input_button" type="Button" parent="headers/button_container"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Add Input"
icon = ExtResource("1_sgum8")

[node name="run_button" type="Button" parent="headers/button_container"]
layout_mode = 2
size_flags_horizontal = 10
tooltip_text = "Run"
icon = ExtResource("2_hs27a")

[node name="Input" parent="." instance=ExtResource("4_gsvd0")]
layout_mode = 2

[node name="Test" parent="." instance=ExtResource("5_crhh8")]
visible = false
layout_mode = 2

[connection signal="tab_changed" from="headers/tab" to="." method="_on_tab_changed"]
[connection signal="pressed" from="headers/button_container/add_input_button" to="." method="_on_add_input_button_pressed"]
[connection signal="pressed" from="headers/button_container/run_button" to="." method="_on_run_button_pressed"]
